--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     -->
 
     <link href="css/style-minify.css" rel="stylesheet">
+    <link href="css/style-mobile.css" rel="stylesheet" media="(max-width: 480px)">
     <link href="css/print-minify.css" rel="stylesheet" media="print">
 
     <script>
