--- a/index.html
+++ b/index.html
@@ -76,8 +76,8 @@
     </div>
 
     <noscript id="deferred-styles">
-      <link href="css/style-minify.css" rel="stylesheet">
-      <link href="css/print-minify.css" rel="stylesheet" media="print">
+      <link href="css/style.css" rel="stylesheet">
+      <link href="css/print.css" rel="stylesheet" media="print">
 
     </noscript>
     <script>
