--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it...
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     -->
-
+      <link href="css/style.css" rel="stylesheet">
+      <link href="css/print.css" rel="stylesheet" media="print">
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
       w[g]=w[g]||function(){(w[g].q=w[g].q||[]).push(arguments)};w[g].l=1*new Date();})(window,'ga');
@@ -74,7 +75,7 @@
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
       </footer>
     </div>
-
+<!--
     <noscript id="deferred-styles">
       <link href="css/style.css" rel="stylesheet">
       <link href="css/print.css" rel="stylesheet" media="print">
@@ -93,6 +94,6 @@
       if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
       else window.addEventListener('load', loadDeferredStyles);
     </script>
-
+-->
   </body>
 </html>
