--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     -->
       <link href="css/style.css" rel="stylesheet" media="(min-width: 480px)">
-      <link href="css/style-mobile.css" rel="stylesheet" media="(max-width: 480px)">
+      <link href="css/style-mobile.css" rel="stylesheet" media="(max-width: 480px) and (orientation: portrait)">
       <link href="css/print.css" rel="stylesheet" media="print">
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
