--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     -->
       <link href="css/style.css" rel="stylesheet" media="(min-width: 480px)">
-      <link href="css/style-mobile.css" rel="stylesheet" media="(max-width: 480px) and (orientation: portrait)">
+<!--      <link href="css/style-mobile.css" rel="stylesheet" media="(max-width: 480px) and (orientation: portrait)">-->
       <link href="css/print.css" rel="stylesheet" media="print">
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -76,10 +76,9 @@
         <p>&copy; Web Performance 2014 <span id="crp-stats"></span></p>
       </footer>
     </div>
-<!--
+
     <noscript id="deferred-styles">
-      <link href="css/style.css" rel="stylesheet">
-      <link href="css/print.css" rel="stylesheet" media="print">
+      <link href="css/style-mobile.css" rel="stylesheet" media="(max-width: 480px) and (orientation: portrait)">
 
     </noscript>
     <script>
@@ -95,6 +94,6 @@
       if (raf) raf(function() { window.setTimeout(loadDeferredStyles, 0); });
       else window.addEventListener('load', loadDeferredStyles);
     </script>
--->
+
   </body>
 </html>
