--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
     <!-- Hmm, what is the impact of web fonts on speed? Measure it...
     <link href="//fonts.googleapis.com/css?family=Open+Sans:400,700" rel="stylesheet">
     -->
+      <!--media query helps avoid css blocking-->
       <link href="css/style.css" rel="stylesheet" media="(min-width: 480px)">
-<!--      <link href="css/style-mobile.css" rel="stylesheet" media="(max-width: 480px) and (orientation: portrait)">-->
       <link href="css/print.css" rel="stylesheet" media="print">
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
@@ -21,6 +21,7 @@
       ga('create', 'UA-XXXX-Y');
       ga('send', 'pageview');
     </script>
+    <!--async scripts avoid javascript blocking-->>
     <script src="http://www.google-analytics.com/analytics.js" async></script>
     <script src="js/perfmatters.js" async></script>
   </head>
@@ -77,6 +78,10 @@
       </footer>
     </div>
 
+    <!-- code to optimize CSS Delivery, obtain from GOOGLE PAGESPEED HELP
+    https://developers.google.com/speed/docs/insights/OptimizeCSSDelivery
+    -->
+    <!-- this code allow the optimized delivery of css for mobile-->
     <noscript id="deferred-styles">
       <link href="css/style-mobile.css" rel="stylesheet" media="(max-width: 480px) and (orientation: portrait)">
 
